syntax = "proto3";

package pb;

import "money.proto";

option go_package = "github.com/Arthur199212/microservices-demo/src/currency/pb";

message ConvertRequest {
  Money from = 1;
  string toCurrencyCode = 2;
}
